--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@ title: About
 
 <div class="row">
   <div class="span8 offset4">
-    <p>各地の有志の手により、横浜以外にもサイトが立ち上がっています。詳細は<a href="links.html">関連サイト</a>からご確認いただけます。</p>
+    <p>各地の有志の手により、読谷以外にもサイトが立ち上がっています。詳細は<a href="links.html">関連サイト</a>からご確認いただけます。</p>
     </p>
   </div>
 </div>
