--- a/sources.html
+++ b/sources.html
@@ -16,14 +16,14 @@ layout: default
 
 <div class="row">
   <div class="span8 offset4">
-  横浜市財政局財政課が「平成２４年度予算案について　資料編」において用いている一般会計予算の使いみち10分類および局・統括本部２０分類を使っています。
+  前述のデータに基づいてデータの分類をしています。
   </div>
 </div>
 <h2 class="page-header">いつの時点のデータを使っているのか？ </h2>
 
 <div class="row">
   <div class="span8 offset4">
-  平成２４年度横浜市予算のデータを使っています。
+  平成23年度の読谷村財務状況のデータを使っています。
   </div>
 </div>
 
@@ -49,15 +49,7 @@ If you know of data published in this way for your country, please email us at <
 
 <div class="row">
   <div class="span8 offset4">
-  今回の<strong>Where Does My Money Go?</strong> β版は横浜市の平成24年度一般会計予算のうち、主要事業のみを対象としていますが、今後3000事業すべてを反映させる予定です。今後、各自治体や日本政府の一般会計、特別会計、公営企業会計へと対象を広げることも考えています。
+  今回の<strong>Where Does My Money Go?</strong> β版は沖縄県が掲載している読谷村の平成23年度財務状況資料を利用しています。読谷村ホームページからは（平成25年8月27日現在）、目的別の歳出状況がわかる資料を探すことができませんでした。今後、詳しい資料があれば更新していく予定です。
 
-  </div>
-</div>
-
-<h2 class="page-header">私のデータの視覚化をお願いできますか？ </h2>
-
-<div class="row">
-  <div class="span8 offset4">
-  はい、できます。もし、キレイに視覚化したいデータをお持ちであれば、<a href="contact.html">コンタクトフォーム</a>からご連絡下さい。
   </div>
 </div>
