--- a/sources.html
+++ b/sources.html
@@ -7,7 +7,7 @@ layout: default
 
 <div class="row">
   <div class="span8 offset4">
-  <p>このサイトは、沖縄県企画部市町村課の掲載する「<a src="http://www.pref.okinawa.jp/site/kikaku/shichoson/h23zaiseijokyo/h23zaisei_jokyo.html">平成23年度　財政状況資料集</a>」にある読谷村のデータに基づき各種結果が表示されております。
+  <p>このサイトは、沖縄県企画部市町村課の掲載する「<a href="http://www.pref.okinawa.jp/site/kikaku/shichoson/h23zaiseijokyo/h23zaisei_jokyo.html">平成23年度　財政状況資料集</a>」にある読谷村のデータに基づき各種結果が表示されております。
   </div>
 </div>
 
